# agencia-web-b2b

./: .env.example  .eslintignore  .gitignore  ANALYSIS.md  Automated Outreach & Lead Intelligencewalkthrough_outreach.md.resolved  Build Fix Plan Resolving Module Resolution Errorsbuild_fix_plan.md.resolved  CONTEXT.md  DEPLOY_PM2.md  DEPLOY_VPS.md  DOCKER_DATABASE_GUIDE.md  Dockerfile.frontend  E2E_TEST.md  ENVIRONMENTS.md  Guia-paso-a-paso-swagger.md  Launch Readiness & Production Hardeningwalkthrough_launch.md.resolved  Master Project Tracke- Agencia B2B-task.md.resolved  Master Project Tracker   Agencia B2B - task.md.resolved  Master Project Tracker Agencia B2B task.md.resolved  Master Project Tracker Agencia B2B-task.md.resolved  Multi-tenant White-labeling -Phase 8-whitelabel_implementation_plan.md.resolved  PORTABILITY_GUIDE.md  Phase  Advanced AI Lead Scoringintelligence_scoring_plan.md.resolved  Phase 9 Launch Readiness & Production Setup-task.md.resolved  README.md  RUNTIME_DIAGNOSTICO_2026-04-14.md  Reliability & WhatsApp Alerts - walkthrough_reliability.md.resolved  Reliability & WhatsApp Alerts walkthrough_reliability.md.resolved  Walkthrough - Phase 6 Advanced AI Lead Scoringwalkthrough_intelligence.md.resolved  Walkthrough Multi-tenant White-labeling & Agency Identitywalkthrough_whitelabel.md.resolved  auth_test_error.txt  bridge-server.js  check_do.js  check_supabase.js  check_user.sql  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.js  eslint.config.mjs  footer_all.txt  (+45 more)
ai-finobs-claude/: README.md  pyproject.toml
ai-finobs-claude/examples/sample_agent/: main.py
ai-finobs-claude/finobs/: __init__.py  cli.py
ai-finobs-claude/finobs/agents/: __init__.py  rag.py
ai-finobs-claude/finobs/commands/: compare.py  cost.py  debug.py  loops.py  performance.py  trace.py  watch.py
ai-finobs-claude/finobs/config/: pricing.json
ai-finobs-claude/finobs/scripts/: cost_analyzer.py  degradation_detector.py  diff_engine.py  llm_analyzer.py  loop_detector.py  metrics_aggregator.py  optimizer.py  patcher.py  report_generator.py  scoring.py  trace_generator.py  trace_interceptor.py  (+1 more)
ai-finobs-claude/tests/: test_core.py
ai-lead-gen-claude/: README.md  pyproject.toml
(+1095 files in other folders)
