[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finobs"
version = "0.0.1"
description = "observability of agents and finance tokens tools monitor, analyze and optimize LLM agents in production"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "agents", "tokens", "finance software operations" "observability", "monitoring", "cli"]
dependencies = [
    "typer[all]>=0.12",
    "httpx>=0.27",
    "numpy>=1.26",
    "rich>=13",
    "anthropic>=0.25",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "hatch"]
fastapi = ["fastapi>=0.110", "uvicorn[standard]"]

[project.scripts]
finobs = "finobs.cli:app"

[project.urls]
Repository = "https://github.com/fmonfasani/finobs"

[tool.hatch.build.targets.wheel]
packages = ["finobs"]

[tool.ruff]
line-length = 100
target-version = "py311"
