[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leadgen"
version = "0.0.1"
description = "Lead generation pipeline for marketing  services - discover, score, and rank websites by marketing opportunity"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["lead-generation", "marketing", "scraping", "web-analysis", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]

dependencies = [
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
]

[project.scripts]
leadgen = "leadgen.scripts.pipeline:main"

[tool.hatch.build.targets.wheel]
packages = ["src/leadgen"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel.include-only]
"src/leadgen/**" = true

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "LICENSE",
]
